@@ -12,9 +12,7 @@ REFACTOR:
 # watcher/watcher_function/guard
 
 WATCHERS:
-# ping: async dns query
-# ping: udp proto
-# ping: icmp proto: external program fork
+# ping: async dns query?
 # rss: handle errors: non-200
 # rss: record timestamp
 # rss: smart update: use header's info 'if-modified-since'
@@ -45,6 +43,7 @@ OTHER:
 
 FUTURE/POSTPONED:
 # rss: atom feeds?
+# ping: implement echo protocol for TCP/UDP for pinging devices.
 # other (non-gtk2) backends
 # cookbook of solutions
 
