@@ -54,6 +54,7 @@ IPC::Run 			= 0.92
 Linux::Inotify2                 = 1.22
 List::MoreUtils 		= 0.33
 Moo                             = 1.003000
+Net::Ping::External 		= 0.13
 Path::Class 			= 0.32
 Storable                        = 2.45
 URI 				= 1.60 
